# Vehicle-Traffic-Simulation

./: CMakeLists.txt  README.md
include/: Car.h  TrafficLight.h
src/: Car.cpp  TrafficLight.cpp  TrafficSimulation.cpp  main  main.cpp
